docs/api/0.2.0/ironwood/ds/CharSequenceMap.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.0**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# CharSequenceMap

**Class** · `ironwood.ds.CharSequenceMap`

```java
public class CharSequenceMap<E extends Object> implements Iterable<E>
```

**Implements:** [`Iterable<E>`](../lang/Iterable.md)


## Member summary

[Fields](#fields) · [Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`DEFAULT_INITIAL_CAPACITY`](#member-DEFAULT_INITIAL_CAPACITY) |  |
| [`DEFAULT_LOAD_FACTOR`](#member-DEFAULT_LOAD_FACTOR) |  |
| [`DEFAULT_MAX_KEY_LENGTH`](#member-DEFAULT_MAX_KEY_LENGTH) |  |
| [`CharSequenceMap()`](#member-CharSequenceMap-28--29-) |  |
| [`CharSequenceMap(int)`](#member-CharSequenceMap-28-int-29-) |  |
| [`CharSequenceMap(int,short)`](#member-CharSequenceMap-28-int-2c-short-29-) |  |
| [`CharSequenceMap(int,float)`](#member-CharSequenceMap-28-int-2c-float-29-) |  |
| [`CharSequenceMap(short)`](#member-CharSequenceMap-28-short-29-) |  |
| [`CharSequenceMap(short,float)`](#member-CharSequenceMap-28-short-2c-float-29-) |  |
| [`CharSequenceMap(float)`](#member-CharSequenceMap-28-float-29-) |  |
| [`CharSequenceMap(int,short,float)`](#member-CharSequenceMap-28-int-2c-short-2c-float-29-) |  |
| [`getInitialCapacity()`](#member-getInitialCapacity-28--29-) |  |
| [`getMaxKeyLength()`](#member-getMaxKeyLength-28--29-) |  |
| [`getLoadFactor()`](#member-getLoadFactor-28--29-) |  |
| [`size()`](#member-size-28--29-) |  |
| [`getCurrIteratorKey()`](#member-getCurrIteratorKey-28--29-) |  |
| [`isEmpty()`](#member-isEmpty-28--29-) |  |
| [`containsKey(CharSequence)`](#member-containsKey-28-CharSequence-29-) |  |
| [`get(CharSequence)`](#member-get-28-CharSequence-29-) |  |
| [`put(CharSequence,E)`](#member-put-28-CharSequence-2c-E-29-) |  |
| [`remove(CharSequence)`](#member-remove-28-CharSequence-29-) |  |
| [`clear()`](#member-clear-28--29-) |  |
| [`equals(Object)`](#member-equals-28-Object-29-) |  |
| [`hashCode()`](#member-hashCode-28--29-) |  |
| [`toString()`](#member-toString-28--29-) |  |
| [`iterator()`](#member-iterator-28--29-) |  |

## Fields

<a name="member-DEFAULT_INITIAL_CAPACITY"></a>

### `DEFAULT_INITIAL_CAPACITY`

```java
public static final int DEFAULT_INITIAL_CAPACITY = 128;
```


[Back to member summary](#member-summary)

<a name="member-DEFAULT_LOAD_FACTOR"></a>

### `DEFAULT_LOAD_FACTOR`

```java
public static final float DEFAULT_LOAD_FACTOR = 0.80f;
```


[Back to member summary](#member-summary)

<a name="member-DEFAULT_MAX_KEY_LENGTH"></a>

### `DEFAULT_MAX_KEY_LENGTH`

```java
public static final short DEFAULT_MAX_KEY_LENGTH = 256;
```


[Back to member summary](#member-summary)

## Constructors

<a name="member-CharSequenceMap-28--29-"></a>

### `CharSequenceMap()`

```java
public CharSequenceMap()
```


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-int-29-"></a>

### `CharSequenceMap(int)`

```java
public CharSequenceMap(int initialCapacity)
```


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-int-2c-short-29-"></a>

### `CharSequenceMap(int,short)`

```java
public CharSequenceMap(int initialCapacity, short maxKeyLength)
```


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-int-2c-float-29-"></a>

### `CharSequenceMap(int,float)`

```java
public CharSequenceMap(int initialCapacity, float loadFactor)
```


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-short-29-"></a>

### `CharSequenceMap(short)`

```java
public CharSequenceMap(short maxKeyLength)
```


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-short-2c-float-29-"></a>

### `CharSequenceMap(short,float)`

```java
public CharSequenceMap(short maxKeyLength, float loadFactor)
```


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-float-29-"></a>

### `CharSequenceMap(float)`

```java
public CharSequenceMap(float loadFactor)
```


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-int-2c-short-2c-float-29-"></a>

### `CharSequenceMap(int,short,float)`

```java
public CharSequenceMap(int initialCapacity, short maxKeyLength, float loadFactor)
```


[Back to member summary](#member-summary)

## Methods

<a name="member-getInitialCapacity-28--29-"></a>

### `getInitialCapacity()`

```java
public int getInitialCapacity()
```


[Back to member summary](#member-summary)

<a name="member-getMaxKeyLength-28--29-"></a>

### `getMaxKeyLength()`

```java
public short getMaxKeyLength()
```


[Back to member summary](#member-summary)

<a name="member-getLoadFactor-28--29-"></a>

### `getLoadFactor()`

```java
public float getLoadFactor()
```


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```


[Back to member summary](#member-summary)

<a name="member-getCurrIteratorKey-28--29-"></a>

### `getCurrIteratorKey()`

```java
public CharSequence getCurrIteratorKey()
```


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```


[Back to member summary](#member-summary)

<a name="member-containsKey-28-CharSequence-29-"></a>

### `containsKey(CharSequence)`

```java
public boolean containsKey(CharSequence key)
```


[Back to member summary](#member-summary)

<a name="member-get-28-CharSequence-29-"></a>

### `get(CharSequence)`

```java
public E get(CharSequence key)
```


[Back to member summary](#member-summary)

<a name="member-put-28-CharSequence-2c-E-29-"></a>

### `put(CharSequence,E)`

```java
public E put(CharSequence key, E value)
```


[Back to member summary](#member-summary)

<a name="member-remove-28-CharSequence-29-"></a>

### `remove(CharSequence)`

```java
public E remove(CharSequence key)
```


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<E> iterator()
```


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
