docs/api/0.2.2-beta/ironwood/ds/CharSequenceMap.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.2\-beta**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# CharSequenceMap

**Class** · `ironwood.ds.CharSequenceMap`

```java
public class CharSequenceMap<E extends Object> implements Iterable<E>
```

**Implements:** [`Iterable<E>`](../lang/Iterable.md)

Maps character sequences to values.


## Member summary

[Fields](#fields) · [Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`DEFAULT_INITIAL_CAPACITY`](#member-DEFAULT_INITIAL_CAPACITY) | The default initial capacity. |
| [`DEFAULT_LOAD_FACTOR`](#member-DEFAULT_LOAD_FACTOR) | The default load factor. |
| [`DEFAULT_MAX_KEY_LENGTH`](#member-DEFAULT_MAX_KEY_LENGTH) | The default max key length. |
| [`CharSequenceMap()`](#member-CharSequenceMap-28--29-) | Creates a new CharSequenceMap. |
| [`CharSequenceMap(int)`](#member-CharSequenceMap-28-int-29-) | Creates a new CharSequenceMap. |
| [`CharSequenceMap(int,short)`](#member-CharSequenceMap-28-int-2c-short-29-) | Creates a new CharSequenceMap. |
| [`CharSequenceMap(int,float)`](#member-CharSequenceMap-28-int-2c-float-29-) | Creates a new CharSequenceMap. |
| [`CharSequenceMap(short)`](#member-CharSequenceMap-28-short-29-) | Creates a new CharSequenceMap. |
| [`CharSequenceMap(short,float)`](#member-CharSequenceMap-28-short-2c-float-29-) | Creates a new CharSequenceMap. |
| [`CharSequenceMap(float)`](#member-CharSequenceMap-28-float-29-) | Creates a new CharSequenceMap. |
| [`CharSequenceMap(int,short,float)`](#member-CharSequenceMap-28-int-2c-short-2c-float-29-) | Creates a new CharSequenceMap. |
| [`getInitialCapacity()`](#member-getInitialCapacity-28--29-) | Returns the initial capacity. |
| [`getMaxKeyLength()`](#member-getMaxKeyLength-28--29-) | Returns the max key length. |
| [`getLoadFactor()`](#member-getLoadFactor-28--29-) | Returns the load factor. |
| [`size()`](#member-size-28--29-) | Returns the number of stored values. |
| [`getCurrIteratorKey()`](#member-getCurrIteratorKey-28--29-) | Returns the curr iterator key. |
| [`isEmpty()`](#member-isEmpty-28--29-) | Returns whether this value is empty. |
| [`containsKey(CharSequence)`](#member-containsKey-28-CharSequence-29-) | Returns whether a value is associated with the supplied key. |
| [`containsValue(E)`](#member-containsValue-28-E-29-) | Returns whether the supplied value is present. |
| [`get(CharSequence)`](#member-get-28-CharSequence-29-) | Returns the requested value. |
| [`put(CharSequence,E)`](#member-put-28-CharSequence-2c-E-29-) | Associates the supplied key with the supplied value. |
| [`remove(CharSequence)`](#member-remove-28-CharSequence-29-) | Removes the requested value or entry. |
| [`clear()`](#member-clear-28--29-) | Removes all stored values. |
| [`equals(Object)`](#member-equals-28-Object-29-) | Tests this value for equality with another object. |
| [`hashCode()`](#member-hashCode-28--29-) | Returns this value's hash code. |
| [`toString()`](#member-toString-28--29-) | Returns a textual representation of this value. |
| [`iterator()`](#member-iterator-28--29-) | Returns an iterator over this value's elements. |

## Fields

<a name="member-DEFAULT_INITIAL_CAPACITY"></a>

### `DEFAULT_INITIAL_CAPACITY`

```java
public static final int DEFAULT_INITIAL_CAPACITY = 128;
```

The default initial capacity.


[Back to member summary](#member-summary)

<a name="member-DEFAULT_LOAD_FACTOR"></a>

### `DEFAULT_LOAD_FACTOR`

```java
public static final float DEFAULT_LOAD_FACTOR = 0.80f;
```

The default load factor.


[Back to member summary](#member-summary)

<a name="member-DEFAULT_MAX_KEY_LENGTH"></a>

### `DEFAULT_MAX_KEY_LENGTH`

```java
public static final short DEFAULT_MAX_KEY_LENGTH = 256;
```

The default max key length.


[Back to member summary](#member-summary)

## Constructors

<a name="member-CharSequenceMap-28--29-"></a>

### `CharSequenceMap()`

```java
public CharSequenceMap()
```

Creates a new CharSequenceMap.


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-int-29-"></a>

### `CharSequenceMap(int)`

```java
public CharSequenceMap(int initialCapacity)
```

Creates a new CharSequenceMap.


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-int-2c-short-29-"></a>

### `CharSequenceMap(int,short)`

```java
public CharSequenceMap(int initialCapacity, short maxKeyLength)
```

Creates a new CharSequenceMap.


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-int-2c-float-29-"></a>

### `CharSequenceMap(int,float)`

```java
public CharSequenceMap(int initialCapacity, float loadFactor)
```

Creates a new CharSequenceMap.


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-short-29-"></a>

### `CharSequenceMap(short)`

```java
public CharSequenceMap(short maxKeyLength)
```

Creates a new CharSequenceMap.


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-short-2c-float-29-"></a>

### `CharSequenceMap(short,float)`

```java
public CharSequenceMap(short maxKeyLength, float loadFactor)
```

Creates a new CharSequenceMap.


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-float-29-"></a>

### `CharSequenceMap(float)`

```java
public CharSequenceMap(float loadFactor)
```

Creates a new CharSequenceMap.


[Back to member summary](#member-summary)

<a name="member-CharSequenceMap-28-int-2c-short-2c-float-29-"></a>

### `CharSequenceMap(int,short,float)`

```java
public CharSequenceMap(int initialCapacity, short maxKeyLength, float loadFactor)
```

Creates a new CharSequenceMap.


[Back to member summary](#member-summary)

## Methods

<a name="member-getInitialCapacity-28--29-"></a>

### `getInitialCapacity()`

```java
public int getInitialCapacity()
```

Returns the initial capacity.


[Back to member summary](#member-summary)

<a name="member-getMaxKeyLength-28--29-"></a>

### `getMaxKeyLength()`

```java
public short getMaxKeyLength()
```

Returns the max key length.


[Back to member summary](#member-summary)

<a name="member-getLoadFactor-28--29-"></a>

### `getLoadFactor()`

```java
public float getLoadFactor()
```

Returns the load factor.


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```

Returns the number of stored values.


[Back to member summary](#member-summary)

<a name="member-getCurrIteratorKey-28--29-"></a>

### `getCurrIteratorKey()`

```java
public CharSequence getCurrIteratorKey()
```

Returns the curr iterator key.


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```

Returns whether this value is empty.


[Back to member summary](#member-summary)

<a name="member-containsKey-28-CharSequence-29-"></a>

### `containsKey(CharSequence)`

```java
public boolean containsKey(CharSequence key)
```

Returns whether a value is associated with the supplied key.


[Back to member summary](#member-summary)

<a name="member-containsValue-28-E-29-"></a>

### `containsValue(E)`

```java
public boolean containsValue(E value)
```

Returns whether the supplied value is present.


[Back to member summary](#member-summary)

<a name="member-get-28-CharSequence-29-"></a>

### `get(CharSequence)`

```java
public E get(CharSequence key)
```

Returns the requested value.


[Back to member summary](#member-summary)

<a name="member-put-28-CharSequence-2c-E-29-"></a>

### `put(CharSequence,E)`

```java
public E put(CharSequence key, E value)
```

Associates the supplied key with the supplied value.


[Back to member summary](#member-summary)

<a name="member-remove-28-CharSequence-29-"></a>

### `remove(CharSequence)`

```java
public E remove(CharSequence key)
```

Removes the requested value or entry.


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```

Removes all stored values.


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```

Tests this value for equality with another object.


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```

Returns this value's hash code.


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```

Returns a textual representation of this value.


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<E> iterator()
```

Returns an iterator over this value's elements.


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
